welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:5: error: type mismatch;
 found   : Int(85)
 required: Boolean
    }else if(66<=speed<=85){
                        ^caughtSpeeding:7: error: type mismatch;
 found   : Unit
 required: Int
    }else if(86<=speed){
          ^caughtSpeeding:13: error: type mismatch;
 found   : Int(80)
 required: Boolean
    }else if(61<=speed<=80){
                        ^caughtSpeeding:15: error: type mismatch;
 found   : Unit
 required: Int
    }else if(81<=speed){
          ^