welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  if (isBirthday==true){
    if (speed<=65){
      return 0
    }else if(66<=speed<=85){
      return 1
    }else if(86<=speed){
      return 2
    }
  }else{
    if (speed<=60){
      return 0
    }else if(61<=speed<=80){
      return 1
    }else if(81<=speed){
      return 2
    }    

  }
}